// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Guest schema byName: should work 1`] = `
Object {
  "data": Object {
    "byName": Object {
      "NIK": "2426577447946541",
      "email": "Montana.Hand@yahoo.com",
      "firstName": "Maurine",
      "lastName": "Rath",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Guest schema create guest: should work 1`] = `
Object {
  "data": Object {
    "createGuest": Object {
      "NIK": "12345",
      "company": null,
      "email": "john@example.com",
      "firstName": "John",
      "lastName": "Doe",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Guest schema getGuest: should work 1`] = `
Object {
  "data": Object {
    "getGuest": Object {
      "NIK": "2426577447946541",
      "email": "Montana.Hand@yahoo.com",
      "firstName": "Maurine",
      "lastName": "Rath",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Guest schema listGuest: should work 1`] = `
Object {
  "data": Object {
    "listGuest": Array [
      Object {
        "NIK": "2426577447946541",
        "email": "Montana.Hand@yahoo.com",
        "entryToday": Array [],
        "firstName": "Maurine",
        "lastName": "Rath",
      },
      Object {
        "NIK": "3576141057546284",
        "email": "Haylee.Hand@hotmail.com",
        "entryToday": Array [],
        "firstName": "Andrew",
        "lastName": "Powlowski",
      },
      Object {
        "NIK": "2296707404141403",
        "email": "Tyreek.Langosh@hotmail.com",
        "entryToday": Array [],
        "firstName": "Garland",
        "lastName": "Farrell",
      },
      Object {
        "NIK": "1334468921449254",
        "email": "Reyes.Schmeler@yahoo.com",
        "entryToday": Array [],
        "firstName": "Lindsay",
        "lastName": "Mante",
      },
      Object {
        "NIK": "3033466882546258",
        "email": "Ronny31@yahoo.com",
        "entryToday": Array [],
        "firstName": "Karley",
        "lastName": "Kemmer",
      },
      Object {
        "NIK": "2114520581697904",
        "email": "Carmelo76@yahoo.com",
        "entryToday": Array [],
        "firstName": "Norene",
        "lastName": "Toy",
      },
      Object {
        "NIK": "3569523398873302",
        "email": "Meagan.Luettgen35@yahoo.com",
        "entryToday": Array [],
        "firstName": "Maureen",
        "lastName": "Brekke",
      },
      Object {
        "NIK": "0506812372338506",
        "email": "Shayna_Hammes@gmail.com",
        "entryToday": Array [],
        "firstName": "Lowell",
        "lastName": "Ruecker",
      },
      Object {
        "NIK": "2588536383814803",
        "email": "Kraig0@yahoo.com",
        "entryToday": Array [],
        "firstName": "Clemens",
        "lastName": "Stamm",
      },
      Object {
        "NIK": "6932524529295275",
        "email": "Lora.Renner16@yahoo.com",
        "entryToday": Array [],
        "firstName": "Thad",
        "lastName": "Yundt",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
